--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Your Bookstore</title>
+  <title>Apex Books</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-50 text-gray-900">
   <nav class="p-4 bg-white shadow flex justify-between">
-    <h1 class="text-xl font-bold">📚 Your Bookstore</h1>
+    <h1 class="text-xl font-bold">📚 Apex Books</h1>
     <a href="books.html" class="text-blue-600">Browse Books</a>
   </nav>
   <section class="p-10 text-center">
